<resources>
    <string name="app_name">AppSantander</string>

    <string name="ERROR_UNEXPECTED">Um erro inesperado ocorreu. Tente novamente mais tarde.</string>
    <string name="ERROR_LOADING">Erro ao carregar a chamada.</string>
    <string name="ERROR_INTERNET_CONNECTION">Conexão a internet necessaria para uso da applicação.</string>

    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="btnLogin">Login</string>

    <string name="imgDescription">Imagem Logo do app bank</string>
    <string name="Testviewpadrao">Jose da Silva Teste</string>
    <string name="conta">Conta</string>
    <string name="numeroConta">2050 / 01.111222-4</string>
    <string name="saldo">Saldo</string>
    <string name="Valor">R$1.000,00</string>
    <string name="pagamento">Pagamento</string>
    <string name="date">12/12/2018</string>
    <string name="contaDeLuz">Conta de luz</string>
    <string name="valorConta">R$1.000,00</string>
    <string name="logout">Icone de logout</string>
    <string name="recentes">Recentes</string>
    <string name="error">An error has occured while loading the data</string>

</resources>