<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_name"
                android:layout_width="288dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/Testviewpadrao"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageView
                android:id="@+id/icone_logout"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginEnd="16dp"
                app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conta"
            android:layout_marginStart="16dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/txt_numero_conta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/numeroConta"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textColor="#FFFFFF" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saldo"
            android:layout_marginStart="16dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"/>

        <TextView
            android:id="@+id/txt_valor_saldo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valorConta"
            android:layout_marginStart="16dp"
            android:textSize="24sp"
            android:textColor="#FFFFFF" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/recentes"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>