<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="210dp"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="339dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/Testviewpadrao"
                android:textColor="#FFFFFF"
                android:textSize="24sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                app:srcCompat="@drawable/ic_baseline_exit_to_app_24" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/conta"
            android:layout_marginStart="16dp"
            android:textColor="#FFFFFF"/>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_margin="8dp"
            android:text="@string/recentes" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>